--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "~0.12.3",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
     "@angular/cli": "~7.2.3",
     "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular/compiler-cli": "^7.2.11",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.3.0",
     "@ionic/lab": "^1.0.0-rc.13",
