--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.0.0",
     "ajv": "^6.9.1",
     "ajv-keywords": "^3.4.0",
+    "axios": "^0.18.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
@@ -43,11 +44,11 @@
     "@ionic/lab": "^1.0.0-rc.13",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.0",
+    "@types/node": "^10.12.30",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
