--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "ajv": "^6.9.1",
     "ajv-keywords": "^3.4.0",
     "axios": "^0.18.0",
+    "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
+    "json2typescript": "^1.2.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
